--- a/DebugServer/DebugServer.csproj
+++ b/DebugServer/DebugServer.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Debug.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Debugger.cs" />
+    <Compile Include="Debugger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
